--- a/index.html
+++ b/index.html
@@ -22,40 +22,35 @@
 	<!-- ===== HEADER ===== -->
 	<header class="l-header" id="header">
 		<nav class="nav bd-container">
+			<a href="#" class="nav__logo">Shinta & Rama</a>
+
 			<div class="nav__menu" id="nav-menu">
-				<div class="nav__close" id="nav-close">
-					<i class='bx bx-x'></i>
-				</div>
 				<ul class="nav__list">
 					<li class="nav__item">
 						<a href="#home" class="nav__link active-link">
 							<i class='bx bx-home nav__icon'></i>
-							<span>Home</span>
+							<span class="nav__name">Home</span>
 						</a>
 					</li>
 					<li class="nav__item">
 						<a href="#couple" class="nav__link">
 							<i class='bx bxs-heart nav__icon'></i>
-							<span>Mempelai</span>
+							<span class="nav__name">Mempelai</span>
 						</a>
 					</li>
 					<li class="nav__item">
 						<a href="#event" class="nav__link">
 							<i class='bx bx-calendar-heart nav__icon'></i>
-							<span>Acara</span>
+							<span class="nav__name">Acara</span>
 						</a>
 					</li>
 					<li class="nav__item">
 						<a href="#message" class="nav__link">
 							<i class='bx bx-envelope nav__icon'></i>
-							<span>Pesan</span>
+							<span class="nav__name">Pesan</span>
 						</a>
 					</li>
 				</ul>
-			</div>
-
-			<div class="nav__toggle" id="nav-toggle">
-				<i class='bx bx-menu menu__icon'></i>
 			</div>
 		</nav>
 	</header>
