revisi template undangan

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 	<!-- ===== HEADER ===== -->
 	<header class="l-header" id="header">
 		<nav class="nav bd-container">
-			<a href="#" class="nav__logo">Shinta & Rama</a>
-
 			<div class="nav__menu" id="nav-menu">
 				<ul class="nav__list">
 					<li class="nav__item">
@@ -51,6 +49,10 @@
 						</a>
 					</li>
 				</ul>
+			</div>
+
+			<div class="nav__toggle" id="nav-toggle">
+				<i class='bx bx-grid-alt menu__icon'></i>
 			</div>
 		</nav>
 	</header>
@@ -140,7 +142,7 @@
 				</div>
 
 				<div class="button">
-					<a class="button__flex" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.010375137561!2d98.67025851426268!3d3.585091951318914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x303131cdde6364c5%3A0x3f93784602afec1d!2sAdimulia%20Hotel%20Medan!5e0!3m2!1sid!2sid!4v1621423444770!5m2!1sid!2sid" data-fancybox data-type="iframe" data-preload="false" data-width="640" data-height="480">
+					<a class="button__flex" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.010375137561!2d98.67025851426268!3d3.585091951318914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x303131cdde6364c5%3A0x3f93784602afec1d!2sAdimulia%20Hotel%20Medan!5e0!3m2!1sid!2sid!4v1621423444770!5m2!1sid!2sid" data-fancybox data-type="iframe" data-preload="false" data-width="100%" data-height="480">
 						<i class='bx bx-map-alt button__icon'></i>
 						<span>Get Direction</span>
 					</a>
@@ -184,11 +186,11 @@
 
 		<!-- ===== PROKES ===== -->
 		<section class="prokes section">
-			<div class="prokes__content bd-container">
-				<h2 class="section-title">Protokol Kesehatan</h2>
-				<span class="section-subtitle">Demi keamanan dan kenyamanan bersama, para hadirin undangan dihimbau untuk memenuhi beberapa peraturan berikut:</span>
+			<div class="prokes__content bd-container" data-aos="fade-down">
+				<h2 class="prokes__title">Protokol Kesehatan</h2>
+				<span class="prokes__subtitle">Demi keamanan dan kenyamanan bersama, para hadirin undangan dihimbau untuk memenuhi beberapa peraturan berikut:</span>
 
-				<div class="prokes__container bd-grid" data-aos="fade-down">
+				<div class="prokes__container bd-grid">
 					<div class="prokes__box">
 						<div class="prokes__img">
 							<img src="assets/img/masker.png" alt="">
