--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 
-				<div class="button">
+				<div class="button button__center">
 					<a class="button__flex" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.010375137561!2d98.67025851426268!3d3.585091951318914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x303131cdde6364c5%3A0x3f93784602afec1d!2sAdimulia%20Hotel%20Medan!5e0!3m2!1sid!2sid!4v1621423444770!5m2!1sid!2sid" data-fancybox data-type="iframe" data-preload="false" data-width="100%" data-height="480">
 						<i class='bx bx-map-alt button__icon'></i>
 						<span>Get Direction</span>
@@ -217,27 +217,19 @@
 		<!-- ===== MESSAGE ===== -->
 		<section class="message section bd-container" id="message">
 			<h2 class="section-title">Send Your Wish!</h2>
+
 			<div class="message__container" data-aos="fade-down" data-aos-delay="100">
-				<form class="message__form">
-					<div class="message__field">
-						<label for="message-name">Nama</label>
-						<input type="text" class="message__input validate" name="name" required value="" id="message-name">
-						<div class="underline"></div>
-					</div>
-					<div class="message__field textarea">
-						<label for="message-textarea">Pesan</label>
-						<textarea class="message__textarea" required id="message-textarea"></textarea>
-						<div class="underline"></div>
-					</div>
-					<div class="message__field" style="display: none;">
-						<input type="url" class="message__input validate" name="url" required value="" id="message-url">
-					</div>
+				<form action="" class="message__form">
+					<input type="text" placeholder="Name" class="message__input" id="message-name">
+					<textarea cols="0" rows="7" placeholder="Message" class="message__input" id="message-textarea"></textarea>
+					<input type="url" class="message__input" id="message-url" style="display: none;">
 
 					<a href="javascript:void" class="button button__flex message__button" id="send-message" type="submit" title="Send">
 						<i class='bx bxl-whatsapp button__icon'></i>
 						<span>Kirim</span>
 					</a>
 
+					<!-- Message Box -->
 					<div id="message-respon"></div>
 				</form>
 			</div>
@@ -291,7 +283,7 @@
 				<div class="popup__line"></div>
 				<h3 class="popup__subtitle2">You are invited to the wedding of</h3>
 				<h1 class="popup__title">Shinta & Rama</h1>
-				<div class="button button__flex popup__btn" id="popup-btn">
+				<div class="button button__flex button__center" id="popup-btn">
 					<i class='bx bx-envelope button__icon'></i>
 					<span>Open Invitation</span>
 				</div>
